# pantry

./: README.md  db.sqlite3  main.py  manage.py  pyproject.toml  setup.py
recipe_project/: asgi.py  settings.py  wsgi.py
recipes/: admin.py  forms.py  models.py  native_scoring.c  native_scoring.pyx  services.py  urls.py  views.py
recipes/migrations/: 0001_initial.py
recipes/templates/recipes/: detail.html  results.html  search.html
