[project]
name = "recipe-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.2.4",
    "django>=6.0.5",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
]
